<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pressure Altimeter</string>
    <string name="ok">Ok</string>
    <string name="kollsman">Kollsman</string>
    <string name="about">About</string>
    <string name="preferences">Preferences</string>
    <string name="altUnits">Altitude units</string>
    <string name="presUnits">Pressure units</string>
    <string name="orientation">Orientation</string>
    <string name="auto">Auto</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="seascape">Seascape</string>
    <string name="fling">Fling</string>
    <string name="fling_summary">Enable fling gestures for
      scrolling. Might not be a good idea in turbulance.</string>
    <string name="keepScreenOn">Keep screen on</string>
    <string name="keepScreenOn_summary">Prevent screen from turning off</string>
    <string name="feet">Feet</string>
    <string name="meters">Meters</string>
    <string name="hg">Inches mercury</string>
    <string name="mb">Millibars</string>
    <string name="aboutWelcome">Welcome to Altimeter</string>
    <string name="aboutContent">\nAltimeter is a basic pressure altimeter.
	Written by Edward Falk. Artwork by Raniawan.
    </string>
</resources>
